# BeagleTranslator

Verifier/: CMakeLists.txt  count.sh  main.cpp
Verifier/BeagleModel/: BeagleGuard.cpp  BeagleGuard.h  BeagleModel.cpp  BeagleModel.h  BeagleModule.cpp  BeagleModule.h  BeagleProperty.cpp  BeagleProperty.h  BeagleVariable.cpp  BeagleVariable.h
Verifier/Model/: Model.cpp  Model.h
Verifier/Model/FiniteStateMachine/: Edge.cpp  Edge.h  Expression.cpp  Expression.h  FiniteStateMachine.cpp  FiniteStateMachine.h  Vertex.cpp  Vertex.h
Verifier/Model/FiniteStateMachine/Action/: Action.cpp  Action.h  AssignmentAction.cpp  AssignmentAction.h  SignalAction.cpp  SignalAction.h
Verifier/Model/FiniteStateMachine/Guard/: Guard.cpp  Guard.h
Verifier/Model/FiniteStateMachine/Term/: AttributeTerm.cpp  AttributeTerm.h  ConstantTerm.cpp  ConstantTerm.h  MethodTerm.cpp  (+3 more)
Verifier/Model/Pragma/: InitialKnowledge.cpp  InitialKnowledge.h  Property.cpp  Property.h
Verifier/Model/Process/: Attribute.cpp  Attribute.h  Method.cpp  Method.h  Process.cpp  Process.h  Signal.cpp  Signal.h  Type.cpp  Type.h
Verifier/ProverifModel/: ProverifComment.cpp  ProverifComment.h  ProverifConst.cpp  ProverifConst.h  ProverifDeclaration.cpp  ProverifDeclaration.h  ProverifEquation.cpp  ProverifEquation.h  ProverifFunc.cpp  ProverifFunc.h  ProverifModel.cpp  ProverifModel.h  ProverifProcess.cpp  ProverifProcess.h  ProverifReduc.cpp  ProverifReduc.h  ProverifVar.cpp  ProverifVar.h
Verifier/Translator/: BeagleTranslator.cpp  BeagleTranslator.h  ProverifTranslator.cpp  ProverifTranslator.h  Translator.h
